--- a/README
+++ b/README
@@ -3,3 +3,17 @@ Files to create a monopoly clone.
 First version will be a command line game.
 
 The second should have a GUI
+------------------------------------------
+my_errs holds custom errors
+
+main_nogui takes care of starting the game and moving the players around
+the board
+
+Mono_module is where most of the gameboard actions happen, defines classes for
+the players and spaces. Has functions implemented for the income tax space,
+most of the community chest cards and a function to deal with what happens when
+a player is too poor to pay a debt.
+
+Still cannont fully delete the reference to a player upon deletion even though
+their information is wiped. Need to add logic for Chance cards, what happens
+when a player lands on a space and the building of houses/hotels.
