--- a/README
+++ b/README
@@ -15,7 +15,9 @@ most of the community chest cards and a function to deal with what happens when
 a player is too poor to pay a debt.
 
 Still cannont fully delete the reference to a player upon deletion even though
-their information is wiped. Need to add logic for Chance cards, building of 
-houses/hotels and trades.
+their information is wiped. Need to add logic for building of houses/hotels and trades.
+
+Chance and Community Chest logic almost complete except for a couple of odd
+situations
 
 Debugging current code before programming in new logic
